[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
rust-version = "1.96" # latest as of creating this
edition = "2024"
license = "Apache-2.0"
authors = []
repository = "https://github.com/zigpy/ziggurat"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# A panic anywhere must kill the whole process instead of leaving it half-dead with
# the Spinel reader still running; the client reconnects and a supervisor restarts us
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
# TODO, shared dependencies here
