[workspace]
resolver = "2"
members = ["crates/*"]
# ziggurat-phy-esp only builds for an ESP32-C6 (riscv32imac) with esp-hal; excluded so
# host `cargo build` over the workspace doesn't try (and fail) to compile it.
exclude = ["fuzz", "crates/ziggurat-phy-esp"]

[workspace.package]
version = "0.1.0"
rust-version = "1.96" # latest as of creating this
edition = "2024"
license = "Apache-2.0"
authors = []
repository = "https://github.com/zigpy/ziggurat"


[workspace.dependencies]
ziggurat-ieee-802154 = { path = "crates/ziggurat-ieee-802154", version = "0.1.0" }
ziggurat-phy = { path = "crates/ziggurat-phy", version = "0.1.0" }
ziggurat-phy-spinel = { path = "crates/ziggurat-phy-spinel", version = "0.1.0" }
ziggurat-spinel = { path = "crates/ziggurat-spinel", version = "0.1.0" }
ziggurat-zigbee = { path = "crates/ziggurat-zigbee", version = "0.1.0" }
ziggurat-driver = { path = "crates/ziggurat-driver", version = "0.1.0" }

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# A panic anywhere must kill the whole process instead of leaving it half-dead with
# the Spinel reader still running; the client reconnects and a supervisor restarts us
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
# TODO, shared dependencies here
