[package]
name = "ziggurat-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
abstract-bits = "0.2.0"
ziggurat-ieee-802154 = { path = "../crates/ziggurat-ieee-802154" }
ziggurat-zigbee = { path = "../crates/ziggurat-zigbee" }

[[bin]]
name = "ieee802154_frame"
path = "fuzz_targets/ieee802154_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nwk_frame"
path = "fuzz_targets/nwk_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nwk_commands"
path = "fuzz_targets/nwk_commands.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aps_frame"
path = "fuzz_targets/aps_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zdp"
path = "fuzz_targets/zdp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "beacon"
path = "fuzz_targets/beacon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ieee802154_frame_roundtrip"
path = "fuzz_targets/ieee802154_frame_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nwk_frame_roundtrip"
path = "fuzz_targets/nwk_frame_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aps_frame_roundtrip"
path = "fuzz_targets/aps_frame_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "beacon_roundtrip"
path = "fuzz_targets/beacon_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nwk_commands_roundtrip"
path = "fuzz_targets/nwk_commands_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zdp_roundtrip"
path = "fuzz_targets/zdp_roundtrip.rs"
test = false
doc = false
bench = false
