[package]
name = "ieee-802154"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
derivative = "2.2.0"
abstract-bits = "0.2.0"
num_enum = "0.7.3"
hex = "0.4.3"
thiserror = "2.0.12"

[dev-dependencies]
hex-literal = "1.0.0"
