[package]
name = "ziggurat"
version = "0.0.1"
authors = []
edition = "2024"

[dependencies]
zigbee-parts = { path = "../zigbee-parts" }
ieee-802154 = { path = "../ieee-802154" }

abstract-bits = "0.2.0"
aes = "0.9.0-pre.2"
cbc = "0.2.0-pre.2"
constant_time_eq = "0.3.1"
hex-literal = "0.4.1"
hex = "0.4.3"
pcap-parser = "0.16.0"
shellexpand = "3.1.0"
inline_colorization = "0.1.6"
derivative = "2.2.0"
crc_all = "0.2.2"
serial2-tokio = "0.1.14"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.26"
env_logger = "0.11.6"
serial2 = "0.2.28"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
num_enum = "0.7.3"
thiserror = "2.0.12"
rand = "0.9.1"
parking_lot = "0.12.4"

[[bin]]
name = "ziggurat"
path = "src/server.rs"
