[package]
name = "ziggurat-zigbee"
version = "0.1.0"
description = "sans-io Zigbee protocol codecs and decision state machines for the Ziggurat stack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ieee-802154 = { package = "ziggurat-ieee-802154", path = "../ieee-802154", version = "0.1.0" }

abstract-bits = "0.2.0"
aes = "0.9.1"
arbitrary-int = "2.1.1"
ccm = { version = "0.6.0-rc.3", default-features = false }
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
hex = "0.4.3"
tracing = "0.1"
num_enum = "0.7.3"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
subtle = "2"
thiserror = "2.0.12"

[dev-dependencies]
hex-literal = "1.1.0"
