[package]
name = "ziggurat-driver"
version.workspace = true
description = "Async (tokio) Zigbee stack driver built on the sans-io ziggurat-zigbee crate"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ziggurat-ieee-802154.workspace = true
ziggurat-phy.workspace = true
ziggurat-zigbee.workspace = true

abstract-bits = "0.2.0"
arbitrary-int = "2.1.1"
futures = { version = "0.3", default-features = false }
tracing = "0.1"
parking_lot = "0.12.4"
rand = "0.10.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt", "macros", "time", "sync", "io-util"] }
