[package]
name = "ziggurat-ieee-802154"
version = "0.1.0"
description = "IEEE 802.15.4 MAC frame codec used by the Ziggurat Zigbee stack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abstract-bits = "0.2.0"
num_enum = "0.7.3"
hex = "0.4.3"
thiserror = "2.0.12"
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
heapless = "0.9.3"

[dev-dependencies]
hex-literal = "1.1.0"
