[package]
name = "ziggurat-ieee-802154"
version.workspace = true
description = "IEEE 802.15.4 MAC frame codec used by the Ziggurat Zigbee stack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abstract-bits = "0.2.0"
num_enum = { version = "0.7.3", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
heapless = "0.9.3"

[dev-dependencies]
hex-literal = "1.1.0"
