[package]
name = "ziggurat-phy-esp"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "esp-radio (ESP32-C6/H2) backend implementing the ziggurat-phy RadioPhy trait"
license = "Apache-2.0"

[dependencies]
ziggurat-phy = { path = "../ziggurat-phy" }
ziggurat-ieee-802154 = { path = "../ziggurat-ieee-802154" }

embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-time = "0.5"
esp-radio = { version = "1.0.0-beta.0", features = ["esp32c6", "ieee802154", "unstable"] }
esp-hal = { version = "1.1.0", features = ["esp32c6", "unstable"] }
