[package]
name = "ziggurat-phy"
version.workspace = true
description = "Generic radio PHY abstraction for the Ziggurat Zigbee stack"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ziggurat-ieee-802154.workspace = true

thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["sync"] }
