[package]
name = "ziggurat-py"
version = "0.0.1"
description = "Python bindings embedding the Ziggurat Zigbee stack"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
authors = []
repository = "https://github.com/zigpy/ziggurat"

[lib]
name = "ziggurat_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.4"
serde_json = "1.0.150"
spinel = { package = "ziggurat-spinel", path = "../spinel", version = "0.1.0" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-util", "sync", "macros"] }
tracing = { version = "0.1.44", features = ["log-always"] }
ziggurat-api = { path = "../api", version = "0.0.1" }
