[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ziggurat-py"
description = "Python bindings embedding the Ziggurat Zigbee stack"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.7,<2"]
