[package]
name = "ziggurat-server"
version.workspace = true
description = "WebSocket JSON-RPC server exposing the Ziggurat Zigbee stack"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ziggurat-spinel.workspace = true
ziggurat-phy-spinel.workspace = true
ziggurat-driver.workspace = true
ziggurat-zigbee.workspace = true

clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hex = "0.4.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
tokio-serial = "5.4"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }

[[bin]]
name = "ziggurat"
path = "src/main.rs"
doc = false
