[package]
name = "ziggurat-spinel"
version.workspace = true
description = "OpenThread Spinel protocol codec and RCP client for the Ziggurat Zigbee stack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ziggurat-ieee-802154.workspace = true

crc_all = "0.2.2"
tracing = "0.1"
num_enum = "0.7.3"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt", "time", "sync", "io-util"] }
tokio-serial = "5.4"

[dev-dependencies]
hex-literal = "1.1.0"
rand = "0.10.1"
