[package]
name = "ziggurat-zigbee"
version.workspace = true
description = "sans-io Zigbee protocol codecs and decision state machines for the Ziggurat stack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ziggurat-ieee-802154.workspace = true

abstract-bits = { git = "https://github.com/yara-blue/abstract-bits.git", version = "0.2.0" }
aes = "0.9.1"
arbitrary-int = "2.1.1"
ccm = { version = "0.6.0-rc.3", default-features = false }
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
once_cell = { version = "1", default-features = false, features = ["race", "alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
subtle = { version = "2", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
hex-literal = "1.1.0"
