[package]
name = "ziggurat"
version = "0.0.1"
authors = []
edition = "2024"

[dependencies]
ieee-802154 = { path = "../ieee-802154" }
spinel = { path = "../spinel" }
zigbee = { path = "../zigbee" }

abstract-bits = "0.2.0"
arbitrary-int = "2.1.1"
log = "0.4.26"
parking_lot = "0.12.4"
rand = "0.10.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt", "macros", "time", "sync", "io-util"] }
