[package]
name = "ziggurat"
version = "0.0.1"
description = "Async (tokio) Zigbee stack driver built on the sans-io ziggurat-zigbee crate"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ieee-802154 = { package = "ziggurat-ieee-802154", path = "../ieee-802154", version = "0.1.0" }
spinel = { package = "ziggurat-spinel", path = "../spinel", version = "0.1.0" }
zigbee = { package = "ziggurat-zigbee", path = "../zigbee", version = "0.1.0" }

abstract-bits = "0.2.0"
arbitrary-int = "2.1.1"
tracing = "0.1"
parking_lot = "0.12.4"
rand = "0.10.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt", "macros", "time", "sync", "io-util"] }
